--- a/ChatApp/.settings/org.eclipse.wst.common.component
+++ b/ChatApp/.settings/org.eclipse.wst.common.component
@@ -9,5 +9,9 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="UserApp.jar" deploy-path="/" handle="module:/resource/UserApp/UserApp">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
