--- a/UserApp/.settings/org.eclipse.wst.common.component
+++ b/UserApp/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="UserApp">
         <wb-resource deploy-path="/" source-path="/ejbModule" tag="defaultRootSource"/>
+        <dependent-module archiveName="json-20160212.jar" deploy-path="/" handle="module:/classpath/lib//home/nina/Desktop/AT/finalProj/json-20160212.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/UserApp/build/classes"/>
     </wb-module>
 </project-modules>
