--- a/ChatApp/.settings/org.eclipse.wst.common.component
+++ b/ChatApp/.settings/org.eclipse.wst.common.component
@@ -12,5 +12,9 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="Helper.jar" deploy-path="/" handle="module:/resource/Helper/Helper">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
